fix: couple of intellij platform warnings